--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10944,14 +10944,14 @@ COLOR CUSTOMIZER
 
 .r-to-top {
   z-index: 9999;
-  width: 35px;
+  width: 300px;
   height: 35px;
   font-size: 25px;
   line-height: 30px;
   text-align: center;
   border-radius: 3px;
   position: fixed;
-  right: -150px;
+  right: 25px;
   bottom: 30px;
   margin-left: -20px;
   cursor: pointer;
@@ -10963,6 +10963,10 @@ COLOR CUSTOMIZER
   background-color: rgba(255, 255, 255, 0.5);
   border: solid 2px #000;
   color: #000; }
+
+.r-to-top span {
+      padding-left: 10px;
+      font-size: 20px; }
 
 .r-to-top:hover {
   background-color: #ffffff; }
@@ -10978,8 +10982,8 @@ COLOR CUSTOMIZER
       padding-bottom: 8px;
       font-size: 13px; }
     .r-footer .r-footer-block .r-footer-phone h5 {
-      font-size: 26px;
-      margin-bottom: 50px; }
+      font-size: 20px;
+      margin-bottom: 20px; }
     .r-footer .r-footer-block img {
       margin-bottom: 40px; }
     .r-footer .r-footer-block p {
